materia: fix padding on small inputs, closes #917

--- a/docs/4/materia/bootstrap.css
+++ b/docs/4/materia/bootstrap.css
@@ -2097,8 +2097,8 @@ select.form-control:focus::-ms-value {
 }
 
 .col-form-label-sm {
-  padding-top: calc(0.8125rem + 0rem);
-  padding-bottom: calc(0.8125rem + 0rem);
+  padding-top: calc(0 + 0rem);
+  padding-bottom: calc(0 + 0rem);
   font-size: 0.7109375rem;
   line-height: 1.5;
 }
@@ -2123,7 +2123,7 @@ select.form-control:focus::-ms-value {
 
 .form-control-sm {
   height: calc(1.5em + 0.5rem + 0rem);
-  padding: 0.8125rem 0;
+  padding: 0 0;
   font-size: 0.7109375rem;
   line-height: 1.5;
   border-radius: 0;
@@ -3841,7 +3841,7 @@ input[type="button"].btn-block {
 .input-group-sm > .input-group-append > .input-group-text,
 .input-group-sm > .input-group-prepend > .btn,
 .input-group-sm > .input-group-append > .btn {
-  padding: 0.8125rem 0;
+  padding: 0 0;
   font-size: 0.7109375rem;
   line-height: 1.5;
   border-radius: 0;
@@ -4079,8 +4079,8 @@ input[type="button"].btn-block {
 
 .custom-select-sm {
   height: calc(1.5em + 0.5rem + 0rem);
-  padding-top: 0.8125rem;
-  padding-bottom: 0.8125rem;
+  padding-top: 0;
+  padding-bottom: 0;
   padding-left: 0;
   font-size: 0.7109375rem;
 }
